--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "@formkit/themes": "^1.0.0-beta.8",
     "@formkit/vue": "^1.0.0-beta.8",
     "@quasar/extras": "^1.13.6",
+    "@tiptap/extension-mention": "^2.0.0-beta.102",
+    "@tiptap/starter-kit": "^2.0.0-beta.191",
+    "@tiptap/vue-3": "^2.0.0-beta.96",
     "aws-sdk": "^2.1117.0",
     "axios": "^0.27.2",
     "docx2html": "^1.3.2",
@@ -17,19 +20,24 @@
     "dotenv": "^16.0.0",
     "firebase": "^9.8.1",
     "jspdf": "^2.5.1",
+    "lit-html": "^2.2.7",
     "lodash": "^4.17.21",
     "mime-types": "^2.1.35",
     "moment": "^2.29.3",
     "pdfjs-dist": "^2.14.305",
     "pinia": "^2.0.13",
     "quasar": "^2.7.3",
+    "tributejs": "^5.1.3",
+    "vee-validate": "^4.6.2",
     "vue": "^3.2.33",
     "vue-doc-preview": "^0.3.2",
     "vue-pdf-embed": "^1.1.2",
     "vue-router": "^4.0.15",
     "vue-video-player": "^5.0.2",
     "walk": "^2.3.15",
-    "xlsx": "^0.17.4"
+    "xlsx": "^0.17.4",
+    "yup": "^0.32.11",
+    "yup-locale-pt": "^0.0.9"
   },
   "devDependencies": {
     "@quasar/vite-plugin": "^1.0.9",
